# dagger-assistant

./: .gitignore  agent.py  bot.py  config.py  dev.py  main.py  pyproject.toml
sandbox/: dagger.json  pyproject.toml
sandbox/src/sandbox/: __init__.py  main.py
