[project]
name = "dagger-bot"
version = "0.1.0"
description = "Discord Bot Agent for Dagger"
requires-python = ">=3.9"
dependencies = [
 "discord.py==2.5.2",
 "google-adk>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "discord_bot"]
