[project]
name = "dagger-assistant"
version = "0.1.0"
description = "Discord Assistant Agent for Dagger"
requires-python = ">=3.9"
dependencies = ["openai-agents==0.0.14", "discord.py==2.5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "discord_bot"]
